Add hello-world and hello-mars styling

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -40,13 +40,25 @@ Element ('hello-mars')(klass)
 </script>
 
 <style>
-hello-world {
-  background: red
-}
-
 h1 {
   background: pink
 }
+
+hello-world, hello-mars {
+  margin: 1em;
+  padding: 1em;
+  color: white;
+  display: block;
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+}
+
+hello-world
+  { background: red }
+
+hello-mars
+  { background: green }
 
 </style>
 
