Add file organization to installation

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 
         <ul>
           <li>
+            <a href=#>Files Organization</a>
+
+          <li>
             <a href=#><code>&lt;script&gt;</code> tag</a>
 
           <li>
