Add hello-world to installation section

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
       </details>
 
     <li>
+      <a href=/examples/hello-world>&lt;hello-world&gt;</a>
+
+    <li>
       <details>
         <summary><a href=#lifecycle>Lifecycle</a></summary>
 
