Add built in custom elements

--- a/index.html
+++ b/index.html
@@ -662,6 +662,14 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
   <header>Examples</header>
 
   <details>
+    <summary><a href=/examples#built-in>&lt;built-in-custom-elements&gt;</a></summary>
+
+    <nav> </nav>
+
+  </details>
+
+
+  <details>
     <summary><a href=/examples#html>&lt;custom-elements&gt;</a></summary>
 
     <nav>
