Add built in custom elements

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
   <header>Examples</header>
 
   <details>
-    <summary><a href=/examples#built-in>&lt;built-in-custom-elements&gt;</a></summary>
+    <summary><a href=/examples>&lt;built-in-custom-elements&gt;</a></summary>
 
     <nav> </nav>
 
