Add section is=enhanced

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
   <header>Examples</header>
 
   <details>
-    <summary><a href=/examples>&lt;built-in-custom-elements&gt;</a></summary>
+  <summary><a href=/examples>&lt;section <em style='color:rgba(220,220,220,0.7)'>is=<strong>enhanced</strong></em> &gt;</a><sup>New!</sup></summary>
     <!-- https://github.com/w3c/webcomponents/issues/662 -->
 
     <nav> </nav>
