Add ES Module and HTML Module support

--- a/index.html
+++ b/index.html
@@ -221,6 +221,25 @@
         </footer>
       </details>
 
+    <li>
+      <details>
+        <summary><a href=#modules>Modules</a></summary>
+
+        <ul>
+          <li>
+            <a href=#modules:html><abbr title='Hyper-Text Markup Language'>HTML</abbr> Modules</a>
+
+          <li>
+            <a href=#modules:ecmascript>ECMAScript Modules</a>
+
+        </ul>
+
+        <footer>
+          <ul>
+            <li>
+          </ul>
+        </footer>
+      </details>
 
   </ul>
 
