Hide alternative installations

--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
             <a href=#>Files Organization</a>
             <!-- https://medium.com/styled-components/component-folder-pattern-ee42df37ec68 -->
 
-          <li>
+          <li hidden >
             <a href=#><code>&lt;script&gt;</code> tag</a>
 
-          <li>
+          <li hidden >
             <a href=#>Chrome Extension</a>
             <!-- https://github.com/pakastin/redom-devtools/blob/master/dist/devtools.js -->
 
-          <li>
+          <li hidden >
             <a href=#><code>$ npm i snuggsi</code></a>
 
       </details>
