Add 'Are Modules Ready' link

--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
         <footer>
           <ul>
             <li>
+              <a rel=external target=external href=https://aremodulesready.com>Are Modules Ready?</a>
+
           </ul>
         </footer>
       </details>
