Add Virtual Reality Mixin

--- a/index.html
+++ b/index.html
@@ -788,7 +788,13 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
 
     <nav>
       <ul>
-        <li><abbr title='Reactive JS'>RxJS</abbr> <em>(ReactiveJS)</em>
+        <li>
+          <a href=#>
+            <abbr title='Virtual Reality'>VR</abbr> <em>(Virtual Reality)</em>
+          </a>
+
+        <li>
+          <abbr title='Reactive JS'>RxJS</abbr> <em>(ReactiveJS)</em>
     </nav>
 
   </details>
