Add Mixins section

--- a/index.html
+++ b/index.html
@@ -223,6 +223,42 @@
 
     <li>
       <details>
+        <summary><a href=#mixins>Mixins</a></summary>
+
+
+        <footer>
+          <ul>
+            <li>
+              <a
+                target=mdn
+                rel=external
+                href=https://developer.mozilla.org/en-US/docs/Glossary/Mixin>
+                <abbr title='Mozilla Developer Network'>MDN</abbr>
+                Mixins
+              </a>
+
+            <li>
+              <a
+                rel=external
+                target=wikipedia
+                href=https://en.wikipedia.org/wiki/Mixin>
+                Wikipedia Mixins
+              </a>
+
+            <li>
+              <a
+                target=mdn
+                rel=external
+                href=https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes#Mix-ins>
+                ECMAScript Mixins
+              </a>
+
+          </ul>
+        </footer>
+      </details>
+
+    <li>
+      <details>
         <summary><a href=#modules>Modules</a></summary>
 
         <ul>
