Add Mixins examples

--- a/index.html
+++ b/index.html
@@ -825,6 +825,13 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
     <nav>
       <ul>
         <li>
+          <!-- https://hackernoon.com/how-to-create-fancy-revealing-animations-with-these-simple-css-tricks-5b34614ae69a -->
+          <a title=Animations href=#>Animations</a>
+
+        <li>
+          <a title=Worker href=#>Worker</a>
+
+        <li>
           <!-- https://www.smashingmagazine.com/2017/09/guide-virtual-reality-web-developers/?utm_source=frontendfocus&utm_medium=email -->
           <a href=#>
             <abbr title='Virtual Reality'>VR</abbr> <em>(Virtual Reality)</em>
