Update to is enhanced

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
   <header>Examples</header>
 
   <details>
-  <summary><a href=/examples>&lt;section <em style='color:rgba(220,220,220,0.7)'>is=<strong>enhanced</strong></em> &gt;</a><sup>New!</sup></summary>
+  <summary><a href=/examples>&lt;section <em style='color:rgba(220,220,220,0.7)'><strong>is</strong>=enhanced</em> &gt;</a><sup>New!</sup></summary>
     <!-- https://github.com/w3c/webcomponents/issues/662 -->
 
     <nav> </nav>
