fragment identifiers for index.html#lifecycle:definition

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
   <h1>Custom Element Lifecycle</h1>
 
   <dl>
-    <dt>0. Definition
+    <dt id=lifecycle:definition >0. Definition
     <dd>
       A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name`</code>
       declaration immediately followed with a <code>(class extends HTMLElement {})</code> definition.
