fragment identifiers for index.html#lifecycle:construction

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       definition is specified. This means your custom element can be styled like any other HTML element.
       However, your element will not have functionality until after definition.
 
-    <dt>1. Construction
+    <dt id=lifecycle:construction >1. Construction
     <dd>
       After <strong>Definition & Declaration</strong> the custom element will go through
       it's <code>constructor ()</code> routine. Typically you will not need to define a
