fragment identifiers for index.html#lifecycle:reflection

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       If you would like to alter the custom element construction,
       define an <code>initialize ()</code> function which is a hook that will be used automatically.
 
-    <dt>2. Reflection
+    <dt id=lifecycle:reflection >2. Reflection
     <dd>
       After <strong>Construction</strong> the custom element will inspect your
       <code>class extends HTMLElement</code> definition for Event Handlers.
