fragment identifiers for index.html#lifecycle:imports

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       delegate the event handler to your custom element container.  As a
       convenience the <code>this</code> keyword will <strong><em>Always</em></strong> be bound to the custom element.
 
-    <dt>3. <code>&lt;link&gt;</code>Importing
+    <dt id=lifecycle:imports >3. <code>&lt;link&gt;</code>Importing
     <dd>
       The <code>&lt;link rel=import&gt;</code> step is critical for custom elements which contain a definition within an external file.
       <em>(See <a
