fragment identifiers for index.html#lifecycle:slots

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       Imports are relative to the partial HTML document that contains the contents to hydrate each
       instance of your custom element on upgrade.
 
-    <dt>4. <code>&lt;slot&gt;</code> Replacement
+    <dt id=lifecycle:slots >4. <code>&lt;slot&gt;</code> Replacement
     <dd>
       After <strong>Importing</strong> the default contents of your custom element
       there will be a replacement of any child elements with a
