fragment identifiers for index.html#lifecycle:rendering

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
       An element with a slot attribute is assigned to the slot created by the
       &lt;slot&gt; element whose name attribute's value matches that slot attribute's value.
 
-    <dt>5. Rendering
+    <dt id=lifecycle:rendering >5. Rendering
     <dd>
       Rendering of your custom element occurs on <strong>three specific occasions</strong>:
       <ol>
