fragment identifiers for index.html#lifecycle:rendering:templates

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       <code>{foo}</code> is replaced with <code>"some value"</code> If a <code>get foo () { return 'some value' }</code>
       is a property of your class definition.
 
-    <dt>5b. <code>&lt;template&gt;</code> Iteration
+    <dt id=lifecycle:rendering:templates >5b. <code>&lt;template&gt;</code> Iteration
     <dd>
     Often we need to iterate over collections within a custom element. Traditionally this is done 
     <a
