fragment identifiers for index.html#lifecycle:rendering:events

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     will <strong><em>"Tree Walk"<sup>&trade;</sup></em></strong> the children of your custom element looking for 
     <code>&lt;template name=&hellip;&gt;</code> and <em>"bind"</em> the collection value of a property with the same name on your class.
 
-    <dt>5c. Event Registration
+    <dt id=lifecycle:rendering:events >5c. Event Registration
     <dd>
       One of the many pains of classic browser programming is registering events on DOM elements.
       <strong>Event Registration</strong> is the process of declaratively registering event handlers by name
