fragment identifiers for index.html#lifecycle:idle

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       <code>&lt;foo-bar onclick=hello&gt;</code> will <em>"automagically"<sup>&trade;</sup></em> register
       the <code>hello (event) { }</code> handler defined on the custom element <code>class</code> definition.
 
-    <dt>6. Post-Render Idle
+    <dt id=lifecycle:idle >6. Post-Render Idle
     <dd>
       Idling occurs after the <strong>Rendering</strong> routine consisting of
       <strong>Token Binding</strong>, <strong>Template Iteration</strong>,
