--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
           idle time between animation frames
       </a>.
 
-    <dt>7. Triggering Events <em>(On completion repeats rendering step #5 a, b, &amp; c)</em>
+    <dt id=lifecycle:events >7. Triggering Events <em>(On completion repeats rendering step #5 a, b, &amp; c)</em>
     <dd>
       There are a few ways events are registered by <strong>snuggsiツ</strong>.
       Whether you choose a declarative registration <code>&lt;button onclick=onfoo&gt;</code>,
