Lifecycle navigation menu

--- a/index.html
+++ b/index.html
@@ -130,8 +130,41 @@
       <a href=/examples/hello-world >&lt;hello-world&gt;</a>
 
     <li>
-      <details>
-        <summary><a href=#lifecycle>Lifecycle</a></summary>
+      <details open>
+        <summary><a href=#lifecycle >Lifecycle</a></summary>
+
+        <ol>
+          <li>
+            <a href=#lifecyle:definition >Definition</a>
+
+          <li>
+          <a href=#lifecyle:construction ><code>initialize ()</code> Construction</a>
+
+          <li>
+            <a href=#lifecyle:reflection >Reflection</a>
+
+          <li>
+            <a href=#lifecyle:imports >Imports</a>
+
+          <!-- This is a bit wonky in nomenclature and semantics -->
+
+          <li>
+            <a href=#lifecyle:slots >Slot Replacement</a>
+
+          <li>
+            <a href=#lifecyle:rendering >Rendering</a>
+
+            <ol>
+              <li>
+                <a href=#lifecycle:rendering:tokens >Tokens</a>
+
+              <li>
+                <a href=#lifecycle:rendering:templates >Templates</a>
+
+              <li>
+                <a href=#lifecycle:rendering:registration >Event Registration</a>
+
+            </ol>
 
         <ul>
           <li>
