Add link for lifecycle:idle

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </ol>
 
           <li>
-            <a href=#>Initiaize</a>
+            <a href=#lifecyle:idle >Idle</a>
 
           <li>
             <a href=#>Render</a>
