Add link for lifecycle:handling events

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <a href=#lifecyle:idle >Idle</a>
 
           <li>
-            <a href=#>Render</a>
+            <a href=#lifecyle:events >Handling Events</a>
 
       </details>
 
