--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <a href=/examples/hello-world >&lt;hello-world&gt;</a>
 
     <li>
-      <details open>
+      <details>
         <summary><a href=#lifecycle >Lifecycle</a></summary>
 
         <ol>
