Name change Animations to Animate

--- a/index.html
+++ b/index.html
@@ -857,9 +857,10 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
     <nav>
       <ul>
         <li>
+          <!-- https://discourse.wicg.io/t/proposal-wait-for-element-to-transition/2225 -->
           <!-- https://medium.com/@adaptivepath/jedi-principles-of-ui-animation-2b88423b1dac -->
           <!-- https://hackernoon.com/how-to-create-fancy-revealing-animations-with-these-simple-css-tricks-5b34614ae69a -->
-          <a title=Animations href=#>Animations</a>
+          <a title=Animate href=#>Animate</a>
 
         <li>
           <a title=Worker href=#>Worker</a>
