Add visibility test

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -4,6 +4,10 @@
 
 <h1>Internet Explorer Test Page</h1>
 
+<section style='visibility:hidden;background:pink;height:20vh;padding:3em'>
+  <p style='visibility:visible;background:orange;padding:3em'>Whatever is clever</p>
+</section>
+
 <hello-world>Hello World!!!</hello-world>
 <hello-world>Hello Sun!!!</hello-world>
 <hello-world>Hello Moon!!!</hello-world>
