Add best practices section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
 
       </details>
 
+    <li>
+      <details>
+        <summary><a href=#practices>Best Practices</a></summary>
+
+        <ul>
+          <li></li>
+
+      </details>
+
   </ul>
 
   <header>Documentation</header>
