Add collection property to Custom Element

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -99,6 +99,11 @@ var Bam = function (_HTMLElement) {
     get: function get() {
       return 'bar';
     }
+  }, {
+    key: 'snuggs',
+    get: function get() {
+      return ['zoh', 'mah', 'gerd'];
+    }
   }]);
 
   return Bam;
