Add Date to output for snuggs key in IE

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -102,7 +102,7 @@ var Bam = function (_HTMLElement) {
   }, {
     key: 'snuggs',
     get: function get() {
-      return ['zoh', 'mah', 'gerd'];
+      return [(new Date).getTime(), 'zoh', 'mah', 'gerd'];
     }
   }]);
 
