--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 <link rel=stylesheet href=hello-world/index.css>
 
-<script src=/snuggsi.es></script>
+<script src=/></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
