Change to alert for IE

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -100,7 +100,7 @@ var Bam = function (_HTMLElement) {
   }, {
     key: 'onrob',
     value: function onrob(event) {
-      console.log ('🎉🎉 TOUCHDOWN! 🏈 ', event);
+      alert ('🎉🎉 TOUCHDOWN! 🏈 ', event);
     }
   }, {
     key: 'baz',
