Add comment about transpiled component

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -34,6 +34,13 @@
 
 <script>
 
+/*
+The following is code generated from a transpilation of
+
+class extends HTMLElement { ... }
+
+*/
+
 var babel = function () {
 
   function Mock () {
