Add test for two components with same name template

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -23,6 +23,21 @@
   </template>
 </hello-world>
 
+<hello-world>
+  Hello World Again!!! {baz}
+
+  <template name=snuggs>
+    <section style=background:pink;color:green;>
+      <h1>{self}</h1>
+
+      WOW ! {#}
+      <footer>
+        <button onclick=onrob>Score</button>
+      </footer>
+    </section>
+  </template>
+</hello-world>
+
 <!--
   <hello-world>Hello Sun!!!</hello-world>
   <hello-world>Hello Moon!!!</hello-world>
