Change name to Conventions

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <footer>
           <ul>
             <li>
-              <a href=https://blog.garstasio.com/you-dont-need-jquery/events>Web Platform Event Conventions</a>
+              <a href=https://blog.garstasio.com/you-dont-need-jquery/events>Conventions</a>
           </ul>
         </footer>
       </details>
