Add Inline Model link

--- a/index.html
+++ b/index.html
@@ -251,7 +251,11 @@
             <a href=#events:idle><em>(on)</em>idle</a>
 
           <li>
-            <a href=https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers>GlobalEventHandlers.<em>(on)</em>events</a>
+            <a
+              rel=external
+              target=external
+              href=https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers>Native Handlers</a>
+
         </ul>
 
         <footer>
