Add Traditional Model link

--- a/index.html
+++ b/index.html
@@ -261,7 +261,34 @@
         <footer>
           <ul>
             <li>
-              <a href=https://blog.garstasio.com/you-dont-need-jquery/events>Conventions</a>
+              <a
+                rel=external
+                target=external
+                href=https://en.wikipedia.org/wiki/DOM_events#DOM_Level_0#Inline_model >
+                Inline Registration
+              </a>
+
+            <li>
+              <a
+                rel=external
+                target=external
+                href=https://en.wikipedia.org/wiki/DOM_events#Traditional_model >
+                Traditional Model
+              </a>
+
+            <li>
+              <a
+                rel=external
+                target=external
+                href=http://www.quirksmode.org/js/events_tradmod.html >
+                Traditional Registration
+              </a>
+
+          </ul>
+        </footer>
+      </details>
+
+
           </ul>
         </footer>
       </details>
