Change link relationships to wikipedia

--- a/index.html
+++ b/index.html
@@ -262,24 +262,24 @@
           <ul>
             <li>
               <a
-                rel=external
-                target=external
+                rel=help
+                target=wikipedia
                 href=https://en.wikipedia.org/wiki/DOM_events#DOM_Level_0#Inline_model >
                 Inline Registration
               </a>
 
             <li>
               <a
-                rel=external
-                target=external
+                rel=help
+                target=wikipedia
                 href=https://en.wikipedia.org/wiki/DOM_events#Traditional_model >
                 Traditional Model
               </a>
 
             <li>
               <a
-                rel=external
-                target=external
+                rel=help
+                target=wikipedia
                 href=http://www.quirksmode.org/js/events_tradmod.html >
                 Traditional Registration
               </a>
