Add reference to inline dom events

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <a
                 rel=help
                 target=wikipedia
-                href=https://en.wikipedia.org/wiki/DOM_events#DOM_Level_0#Inline_model >
+                href=https://en.wikipedia.org/wiki/DOM_events#Inline_model >
                 Inline Registration
               </a>
 
