--- a/index.html
+++ b/index.html
@@ -335,6 +335,14 @@
         </footer>
       </details>
 
+    <li>
+      <details>
+        <summary><a href=#imports>Imports</a></summary>
+
+
+        <footer></footer>
+      </details>
+
   </ul>
 
 </nav>
