--- a/examples/ie.html
+++ b/examples/ie.html
@@ -107,7 +107,7 @@ var Bam = function (_HTMLElement) {
   }, {
     key: 'initialize',
     value: function initialize() {
-      console.log ('Initializing', event);
+      console.log ('Initializing');
     }
   }, {
     key: 'onconnect',
