Add Validate module to list

--- a/index.html
+++ b/index.html
@@ -875,6 +875,13 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
     <nav>
       <ul>
         <li>
+          <a
+            title=Validate
+            href=#mixins:validate >
+            Validate
+          </a>
+
+        <li>
           <!-- https://w3c.github.io/web-animations/#use-cases -->
           <!-- https://discourse.wicg.io/t/proposal-wait-for-element-to-transition/2225 -->
           <!-- https://medium.com/@adaptivepath/jedi-principles-of-ui-animation-2b88423b1dac -->
