Add onclick example for ie.html

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -120,6 +120,11 @@ var Bam = function (_HTMLElement) {
       alert ('🎉🎉 TOUCHDOWN! 🏈 ', event);
     }
   }, {
+    key: 'onclick',
+    value: function onclick(event) {
+      this.snuggsi ()
+    }
+  }, {
     key: 'snuggsi',
     value: function snuggsi(event) {
       console.warn ('🎉🎉 TOUCHDOWN! 🏈 ', this, event);
