--- a/examples/ie.html
+++ b/examples/ie.html
@@ -8,7 +8,7 @@
   <p style='visibility:visible;background:orange;padding:3em'>Whatever is clever</p>
 </section>
 
-<hello-world>
+<hello-world title="{baz} and {foo} and {bar}">
   Hello World!!! {baz}
 
   <template name=snuggs>
