--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -19,6 +19,14 @@
   <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
 </header-group>
 
+<style>
+hello-world {
+  width: 50vw;
+  display: block;
+  margin: 1em auto;
+}
+</style>
+
 <hello-world>
   Hello {planet}
 </hello-world>
@@ -58,6 +66,7 @@ Element `hello-world`
 })
 
 </script>
+
 <figure>
    <iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/html,css/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
  </figure>
