--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -3,9 +3,6 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<script src=/snuggsi.es></script>
-<script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
-
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
 <!-- https://jakearchibald.com/2016/link-in-body -->
@@ -13,7 +10,6 @@
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<link rel=import href=/examples/header-group>
 <header-group>
   <h2 slot=header>&lt;infinity-calendar&gt;</h2>
 
@@ -30,8 +26,6 @@
   </ul>
 
 </header-group>
-
-<script src=infinity-calendar/infinity-calendar.es defer></script>
 
 <infinity-calendar>
 
@@ -61,6 +55,10 @@
   </template>
 
 </infinity-calendar>
+
+<script src=/></script>
+
+<script src=infinity-calendar/infinity-calendar.es></script>
 
 <script src=/browser-sync.es></script>
 
