Update unpkg.com/snuggsi dependency

--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -56,7 +56,7 @@
 
 </infinity-calendar>
 
-<script src=/></script>
+<script src=//unpkg.com/snuggsi></script>
 
 <script src=infinity-calendar/infinity-calendar.es></script>
 
