added theme color meta tag
@snuggsi .. added the theme-color meta tag.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>snuggsi.esツ</title>
 
 <meta name=viewport content=width=device-width,initial-scale=1>
-
+<meta name="theme-color>
 <!--
 <link
   as=font
