--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -2,20 +2,128 @@
 
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<script src=/snuggsi.es></script>
+<script src=//unpkg.com/snuggsi></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
-
-<link rel=import href=header-group>
-<link rel=import href=to-do/template.html>
 
 <link rel=stylesheet href=//devpunks.herokuapp.com/typography.css>
 <link rel=stylesheet href=//devpunks.herokuapp.com/form.css>
 
-<header-group>
-  <h2 slot=header>&lt;to-do&gt;</h2>
-  <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
-</header-group>
+<to-do name='Loren Hale'>
+  <link rel=stylesheet href=/to-do/index.css>
 
-<to-do name='Loren Hale'>Loading...</to-do>
+  <h1>{name}'s &lt;to-do&gt; List</h1>
 
-<script src=/browser-sync.es></script>
+  <form action=#>
+    <header>
+      <input required placeholder='Remember the milk&hellip;' maxlength=20>
+      <button type=submit>Add</button><!-- implicitly calls `onsubmit` -->
+    </header>
+
+    <input id=all name=filter type=radio checked>
+    <input id=active name=filter type=radio>
+    <input id=completed name=filter type=radio>
+
+    <template name=tasks>
+    <article><!--{#} = current index -->
+      <input  id={#} onclick=toggle type=checkbox>
+      <label for={#}>{task}</label>
+
+      <button onclick=remove>Remove</button>
+    </article>
+    </template>
+
+    <menu>
+      <button onclick=complete>Complete</button>
+
+      <label for=all data-count={all}>All</label>
+      <label for=active data-count={active}>Active</label>
+      <label for=completed data-count={completed}>Done</label>
+
+      <button onclick=clear>Clear</button>
+    </menu>
+  </form>
+</to-do>
+
+<script src=/mixins/storable.es></script>
+<script>
+
+Element `to-do`
+
+(class extends Storable (HTMLElement) {
+
+  initialize
+    (tasks = { tasks: [{ task: 'Eat Food' }] })
+      { this.retrieve (tasks) }
+
+
+  onsubmit (event, input = this.select `input`) {
+    event.preventDefault () // ...form from submitting
+
+    this.context.tasks.push ({ task: input.value })
+
+    this.store () // save context
+    input.value = ''
+  }
+
+
+  onidle (mark) {
+    mark = (task, id) =>
+      this.select
+        `input[id='${id}']`.checked = task.completed
+
+    this.tasks.map (mark)
+  }
+
+
+  complete (event) {
+    event.preventDefault ()
+
+    this.tasks.map (task => task.completed = true)
+    this.store () // save context
+  }
+
+
+  toggle (event, task = this.context.tasks [event.target.id]) {
+    task.completed = !!! task.completed
+    this.store () // save context
+  }
+
+
+  remove (event, parent = event.target.parentNode) {
+    const id = parent.querySelector `input`.id
+
+    this.context.tasks.splice (id, 1)
+    this.store () // save context
+  }
+
+  clear (event, active = task => !!! task.completed) {
+    event.preventDefault ()
+
+    this.context.tasks = this.context.tasks.filter (active)
+    this.store () // save context
+  }
+
+  get name  ()
+    { return this.getAttribute `name` || 'snuggsi' }
+
+  get all ()
+    { return this.context.tasks.length }
+
+  get active () {
+    return this.context
+      .tasks
+      .filter (task => !!! task.completed)
+      .length
+  }
+  get completed () {
+    return this.context
+      .tasks
+      .filter (task => task.completed)
+      .length
+  }
+
+  get tasks ()
+    { return this.context.tasks }
+})
+
+</script>
