--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -9,7 +9,7 @@
 <link rel=stylesheet href=//devpunks.herokuapp.com/form.css>
 
 <to-do name='Loren Hale'>
-  <link rel=stylesheet href=/to-do/index.css>
+  <link rel=stylesheet href=/examples/to-do/index.css>
 
   <h1>{name}'s &lt;to-do&gt; List</h1>
 
