--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -35,9 +35,14 @@
     <menu>
       <button onclick=complete>Complete</button>
 
+<!--
       <label for=all data-count={all}>All</label>
       <label for=active data-count={active}>Active</label>
       <label for=completed data-count={completed}>Done</label>
+-->
+      <label for=all data-count=>All</label>
+      <label for=active data-count=>Active</label>
+      <label for=completed data-count=>Done</label>
 
       <button onclick=clear>Clear</button>
     </menu>
