--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>snuggsi.esツ</title>
 
 <meta name=viewport content=width=device-width,initial-scale=1>
-<meta name=theme-color>
+<meta name=theme-color content=#bada55>
 <!--
 <link
   as=font
